# patient-encounter-system

./: .gitignore  README.md  app.db  pyproject.toml  requirements.tst
.github/workflows/: ci.yml
src/: app.db  database.py  main.py
src/models/: models.py
src/patient_encounter_system/: database.py  main.py
src/patient_encounter_system/models/: models.py
src/patient_encounter_system/schemas/: schemas.py
src/patient_encounter_system/services/: services.py
src/schemas/: schemas.py
src/services/: services.py
tests/: conftest.py  test_api.py  test_appointments.py  test_doctors.py  test_patients.py
