[tool.poetry]
name = "patient-encounter-system"
version = "0.1.0"
description = "Patient encounter management backend using FastAPI"
authors = ["Mukesh <Kumarmukeshmj143@gmail.com>"]
readme = "README.md"
packages = [{ include = "patient_encounter_system", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
requests = "^2.32.5"
sqlalchemy = "^2.0.46"
alembic = "^1.18.3"
fastapi = "^0.128.0"
uvicorn = "^0.40.0"
mysql-connector-python = "^9.6.0"
pymysql = "^1.1.2"
pydantic = { version = "^2.12.5", extras = ["email"] }

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-cov = "^7.0.0"
ruff = "^0.14.14"
pylint = "^4.0.4"
httpx = "^0.28.1"
black = "^24.0.0"
bandit = "^1.7.0"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-v --cov=patient_encounter_system --cov-report=term-missing"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
